--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "react-katex": "^3.0.1",
+    "react-photo-album": "^3.0.2",
+    "react-spring-lightbox": "^1.8.0",
     "three": "^0.171.0"
   },
   "devDependencies": {
