--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.120.3",
     "@react-three/fiber": "^9.0.0-beta.1",
+    "@vercel/analytics": "^1.4.1",
     "katex": "^0.16.15",
     "next": "15.0.3",
     "react": "19.0.0",
